--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>ToDo List Dalidy</title>
 </head>
 <body>
+    <div class = "container mx-auto max-w-md mx-auto mt-20">
+        <div class = "bg-white rounded-lg p-5 shadow-lg">
+            <h2 class = "font-bold text-l">ToDoList</h2>
+            <form id = "todo-form" action="" class = "flex mb-4">
+                <input type="text" id = "todo-text" class = "border rounded">
+                <button class = 'rounded bg-sky-500 '>Add</button>
+            </form>
+            <ul id = "todo-list" class = "space-y-2"></ul>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
+
+
+
+
